--- a/package.json
+++ b/package.json
@@ -30,6 +30,9 @@
     "@types/config": "0.0.36",
     "@types/jest": "^26.0.0",
     "@types/node": "^14.0.13",
+    "@types/uglify-js": "^3.9.2",
+    "@types/webpack": "^4.41.18",
+    "@types/webpack-sources": "^1.4.0",
     "cross-env": "^7.0.2",
     "jest": "^26.0.1",
     "prettier": "^2.0.5",
